If applied, this will have updated my page's title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>I Hope This Gets Approved</title>
+    <title>Justin McDonald's Website</title>
     <link rel="shortcut icon" href="https://www.wikipedia.org/static/favicon/wikipedia.ico">
     <script src="js/tota11y.min.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
