If applied, should link  my github account to my footers

--- a/about.html
+++ b/about.html
@@ -1413,7 +1413,8 @@
         <p>Find me on</p>
         <!--Social media logos-->
         <div class="social-media">
-            <img src="img/211904_social_github_icon.svg" width="30px" height="30px" alt="Github">
+            <a href="https://github.com/Peluchemoreno" role="GitHub Account" target="_blank"><img
+                    src="img/211904_social_github_icon.svg" width="30px" height="30px" alt="Github"></a>
             <img src="img/104501_twitter_bird_icon.svg" width="30px" height="30px" alt="Twitter">
             <img src="img/104493_linkedin_icon.svg" width="30px" height="30px" alt="LinkedIn">
         </div>
