if applied this should update my about page's text,  added padding to all pages, and styled my form

--- a/about.html
+++ b/about.html
@@ -37,54 +37,57 @@
             </ul>
         </nav>
     </header>
-
-    <h1>About Me</h1>
-    <h2>Why I Love Web Development</h2>
-    <p>
-        Cat ipsum dolor sit amet, sleep on dog bed, force dog to sleep on floor. Eat owner's food behind the couch
-        mark
-        territory,
-        and hide from vacuum cleaner. If it fits i sits chase after silly colored fish toys around the house
-        bleghbleghvomit my furball
-        really tie the room together for jump on fridge yet go into a room to decide you didn't want to be in there
-        anyway.
-        Pee in human's bed until he cleans the litter box.
-    </p>
-    <h2>My Hobbies</h2>
-    <ul>
-        <li>Playing guitar</li>
-        <li>Playing videogames</li>
-        <li>Reading</li>
-    </ul>
-    <h2>My Slick Skills</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Skills</th>
-                <th>Years of Experience</th>
-                <th>Level of Expertise</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>HTML</td>
-                <td>2</td>
-                <td>Intermideate</td>
-            </tr>
-            <tr>
-                <td>CSS</td>
-                <td>2</td>
-                <td>Intermideate</td>
-            </tr>
-            <tr>
-                <td>Javascript</td>
-                <td>2</td>
-                <td>Grand Master</td>
-            </tr>
-        </tbody>
-    </table>
-    <h2>My Resume and Projects</h2>
-    <a href="#" class="button">Download my resume here</a><br><br>
+    <div class="container">
+        <h1>About Me</h1>
+        <h2>Why I Love Web Development</h2>
+        <p>
+            I love Web Development because it encompasses multiple things that I love, and am passionate about. I love
+            using
+            creativity and my imagination to solve problems, and to help others solve their problems as well. I love
+            working
+            as a team towards a common goal, although Web Development can also be accomplished alone. Web Development
+            has
+            allowed me to scratch that itch of solving a puzzle or creating something tangible that once only existed in
+            my
+            head. It's amazing, really!
+        </p>
+        <h2>My Hobbies</h2>
+        <ul>
+            <li>Playing guitar</li>
+            <li>Playing videogames</li>
+            <li>Reading</li>
+        </ul>
+        <h2>My Slick Skills</h2>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Skills</th>
+                    <th>Years of Experience</th>
+                    <th>Level of Expertise</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>HTML</td>
+                    <td>2</td>
+                    <td>Intermideate</td>
+                </tr>
+                <tr>
+                    <td>CSS</td>
+                    <td>2</td>
+                    <td>Intermideate</td>
+                </tr>
+                <tr>
+                    <td>Javascript</td>
+                    <td>2</td>
+                    <td>Grand Master</td>
+                </tr>
+            </tbody>
+        </table>
+        <h2>My Resume and Projects</h2>
+        <a href="#" class="button button-secondary">Download my resume here</a><br><br>
+        <a href="work.html">Check out my projects here!</a>
+    </div>
 
     <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="auto"
         viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -1408,7 +1411,6 @@
             </path>
         </g>
     </svg>
-    <a href="#">Check out my projects here!</a>
     <footer class="page__footer">
         <p>Find me on</p>
         <!--Social media logos-->
