--- a/contact.html
+++ b/contact.html
@@ -37,25 +37,33 @@
             </ul>
         </nav>
     </header>
-    <h1>Contact</h1>
-    <div>
-        <address>
-            <p>123 Spaceship Ave</p>
-            <p>Crater, The Moon, 77600</p>
-            <p>Email: <a href="mailto:jmcdmoreno19@gmail.com">jmcdmoreno19@gmail.com</a></p>
-            <p>Tel: <a href="tel:0000000000">000-000-0000</a></p>
-        </address>
-        <p><a href="mailto:uhhh.quigley@gmail.com">Get in touch with me!</a></p>
+    <div class="container">
+        <h1>Contact</h1>
+        <div>
+            <address>
+                <p>123 Spaceship Ave</p>
+                <p>Crater, The Moon, 77600</p>
+                <p>Email: <a href="mailto:jmcdmoreno19@gmail.com">jmcdmoreno19@gmail.com</a></p>
+                <p>Tel: <a href="tel:0000000000">000-000-0000</a></p>
+            </address>
+            <p><a href="mailto:uhhh.quigley@gmail.com">Get in touch with me!</a></p>
+        </div>
+        <form action="" method="post" id="contactForm">
+            <div class="label-container">
+                <label for="email" class="formLabel">Email: </label>
+                <input type="email" id="email" required>
+            </div>
+            <div class="label-container">
+                <label for="telephone" class="formLabel">Telephone: </label>
+                <input type="tel" id="telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
+            </div>
+            <div class="label-container">
+                <label for="message" class="formLabel">Message: </label>
+                <textarea id="message" required maxlength="240"></textarea>
+            </div>
+            <input class="form-button" type="submit" value="Send message">
+        </form>
     </div>
-    <form action="" method="post" id="contactForm">
-        <label for="email" class="formLabel">Email: </label>
-        <input type="email" id="email" required>
-        <label for="telephone" class="formLabel">Telephone: </label>
-        <input type="tel" id="telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
-        <label for="message" class="formLabel">Message: </label>
-        <textarea id="message" required maxlength="240"></textarea>
-        <input type="submit" value="Send message">
-    </form>
     <footer class="page__footer">
         <p>Find me on</p>
         <!--Social media logos-->
