--- a/work.html
+++ b/work.html
@@ -39,39 +39,52 @@
     </header>
     <main>
         <section>
-            <h1>My Work</h1>
-            <div class="grid">
-                <div class="grid__item">
-                    <h2>Mobile Web App</h2>
-                    <p>
-                        Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
-                        I've created the HTML and CSS templates.
-                    </p>
-                    <a href="#">See project on GitHub</a>
-                </div>
-                <div class="grid__item">
-                    <h2>Mobile Web App</h2>
-                    <p>
-                        Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
-                        I've created the HTML and CSS templates.
-                    </p>
-                    <a href="#">See project on GitHub</a>
-                </div>
-                <div class="grid__item">
-                    <h2>Mobile Web App</h2>
-                    <p>
-                        Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
-                        I've created the HTML and CSS templates.
-                    </p>
-                    <a href="#">See project on GitHub</a>
-                </div>
-                <div class="grid__item">
-                    <h2>Mobile Web App</h2>
-                    <p>
-                        Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
-                        I've created the HTML and CSS templates.
-                    </p>
-                    <a href="#">See project on GitHub</a>
+            <div class="container">
+                <h1>My Work</h1>
+                <div class="grid">
+                    <div class="grid__item">
+                        <h2>Mobile Web App</h2>
+                        <p>
+                            Within this project, I was responsible for the frontend. It's written in React.js.
+                            Additionally,
+                            I've created the HTML and CSS templates.
+                        </p>
+                        <a href="#">See project on GitHub</a>
+                    </div>
+                    <div class="grid__item">
+                        <h2>Mobile Web App</h2>
+                        <p>
+                            Within this project, I was responsible for the frontend. It's written in React.js.
+                            Additionally,
+                            I've created the HTML and CSS templates.
+                        </p>
+                        <a href="#">See project on GitHub</a>
+                    </div>
+                    <div class="grid__item">
+                        <h2>Mobile Web App</h2>
+                        <p>
+                            Within this project, I was responsible for the frontend. It's written in React.js.
+                            Additionally,
+                            I've created the HTML and CSS templates.
+                        </p>
+                        <a href="#">See project on GitHub</a>
+                    </div>
+                    <div class="grid__item">
+                        <h2>Mobile Web App</h2>
+                        <p>
+                            Within this project, I was responsible for the frontend. It’s written in React.js.
+                            Additionally,
+                            I've created the HTML and CSS templates.
+                        </p>
+                        <a href="#">See project on GitHub</a>
+                    </div>
+                    <div class="grid__item">
+                        <h2>Your Project?</h2>
+                        <p>
+                            This is a description of a project that I do for you!
+                        </p>
+                        <a href="#">See project on GitHub</a>
+                    </div>
                 </div>
             </div>
         </section>
