--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -9,7 +9,7 @@
     <script src="js/tota11y.min.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
@@ -18,9 +18,8 @@
 
 <body>
     <header class="page-header">
-        <img class="page-header__item" src="img/4373217_java_logo_logos_icon.svg" width="200px" height="70px"
-            alt="logo">
-        <nav role="main navigation" class="main-navigation page-header__item">
+        <img class="page-header__item" src="img/4373217_java_logo_logos_icon.svg" alt="logo">
+        <nav class="main-navigation page-header__item">
             <ul class="navigation-list" role="menubar">
                 <li class="navigation-list__item navigation-list__item--active" role="presentation">
                     <a href="index.html" role="menuitem">Home</a>
@@ -48,7 +47,7 @@
             </address>
             <p><a href="mailto:uhhh.quigley@gmail.com">Get in touch with me!</a></p>
         </div>
-        <form action="" method="post" id="contactForm">
+        <form action="#" method="post" id="contactForm">
             <div class="label-container">
                 <label for="email" class="formLabel">Email: </label>
                 <input type="email" id="email" required>
@@ -68,10 +67,10 @@
         <p>Find me on</p>
         <!--Social media logos-->
         <div class="social-media">
-            <a href="https://github.com/Peluchemoreno" role="GitHub Account" target="_blank"><img
-                    src="img/211904_social_github_icon.svg" width="30px" height="30px" alt="Github"></a>
-            <img src="img/104501_twitter_bird_icon.svg" width="30px" height="30px" alt="Twitter">
-            <img src="img/104493_linkedin_icon.svg" width="30px" height="30px" alt="LinkedIn">
+            <a href="https://github.com/Peluchemoreno" target="_blank"><img class="icon"
+                    src="img/211904_social_github_icon.svg" alt="Github"></a>
+            <img class="icon" src="img/104501_twitter_bird_icon.svg" alt="Twitter">
+            <img class="icon" src="img/104493_linkedin_icon.svg" alt="LinkedIn">
         </div>
     </footer>
 </body>
