if applied this shoud improve my site's responsive look on small devices

--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
         </table>
         <h2>My Resume and Projects</h2>
         <a href="#" class="button button-secondary">Download my resume here</a><br><br>
-        <a href="work.html">Check out my projects here!</a>
+        <a class="button button-secondary" href="work.html">Check out my projects here!</a>
     </div>
 
     <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="auto"
