--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
         <div class="profile">
             <!--Come back to add a good photo of myself-->
             <img src="img/JustinMcd.png" alt="Justin McDonald portrait" class="profile__portrait">
-            <h1>Hello World!</h1>
-            <p>My name is Justin McDonald. I am a <span>web</span> developer from the US.</p>
-            <a href="work.html">Check out some of my code</a>
+            <h1 class="home-page-title">Hello World!</h1>
+            <p class="intro-paragraph">My name is Justin McDonald. I am a <span>web</span> developer from the US.</p>
+            <button class="button button-secondary"><a href="work.html">Check out some of my code</a></button>
+            <button class="button" type="button">Default Button</button>
         </div>
     </main>
-    <a href="#" class="default-link">Default Link</a>
-    <button type="button">Default Button</button>
-    <button class="button-secondary">Secondary Button</button>
+    <!--<a href="#" class="default-link">Default Link</a>-->
+    <!--<button class="button-secondary">Secondary Button</button>-->
     <footer class="page__footer">
         <p>Find me on</p>
         <!--Social media logos-->
