if applied, this should make some asthetic changes to my buttons and work page grid

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                 <p>Email: <a href="mailto:jmcdmoreno19@gmail.com">jmcdmoreno19@gmail.com</a></p>
                 <p>Tel: <a href="tel:0000000000">000-000-0000</a></p>
             </address>
-            <p><a href="mailto:uhhh.quigley@gmail.com">Get in touch with me!</a></p>
+            <p><a class="button button-secondary cta" href="mailto:uhhh.quigley@gmail.com">Get in touch with me!</a></p>
         </div>
         <form action="#" method="post" id="contactForm">
             <div class="label-container">
