if applies this should add more changes to html and css in regards to styling my portfolio and making it responsive

--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
                     <a href="#about-me" role="menuitem">About Me</a>
                 </li>
                 <li class="navigation-list__item" role="presentation">
-                    <a href="contact.html" role="menuitem">Contact</a>
+                    <a href="#work" role="menuitem">Work</a>
                 </li>
                 <li class="navigation-list__item" role="presentation">
-                    <a href="work.html" role="menuitem">Work</a>
+                    <a href="contact.html" role="menuitem">Contact</a>
                 </li>
+
             </ul>
         </nav>
     </header>
@@ -45,7 +46,12 @@
                 <p>Hi, I'm</p>
                 <h1 class="home-page-title">Justin McDonald.</h1>
                 <p class="intro-paragraph">I like to build things for the web.</p>
-                <p class="intro-paragraph--sub">I'm a web developer, passionate about beauty and organization.</p>
+                <p class="intro-paragraph--sub">I'm a web developer, passionate about beauty and organization. I've been
+                    highly intrigued by technology and then internet ever since I first discovered computers back in
+                    elementary school. I recently decided to dedicate myself 100% to web development, and well.. the
+                    rest is
+                    history.
+                </p>
                 <button class="hollow-button"><a href="work.html">Check out some of my code</a></button>
             </div>
         </section>
@@ -57,7 +63,6 @@
                     <p>
                         I love web development because it allows me to exercise my creative muscles, solve complex and
                         unique problems, and collorate with a diverse set of minds to achieve a common goal.
-
                     </p>
                     <h2>My Hobbies</h2>
                     <ul>
@@ -65,30 +70,30 @@
                         <li>Playing videogames</li>
                         <li>Reading</li>
                     </ul>
-                    <h2>My Slick Skills</h2>
+                    <h2>My Skills</h2>
                     <table class="table">
                         <thead>
                             <tr>
                                 <th>Skills</th>
-                                <th>Years of Experience</th>
+                                <th>Experience</th>
                                 <th>Level of Expertise</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td>HTML</td>
-                                <td>2</td>
+                                <td>2 yrs</td>
                                 <td>Intermideate</td>
                             </tr>
                             <tr>
                                 <td>CSS</td>
-                                <td>2</td>
+                                <td>2 yrs</td>
                                 <td>Intermideate</td>
                             </tr>
                             <tr>
                                 <td>JS</td>
-                                <td>2</td>
-                                <td>Grand Master</td>
+                                <td>2 yrs</td>
+                                <td>Intermediate</td>
                             </tr>
                         </tbody>
                     </table>
@@ -96,8 +101,58 @@
                     <a href="#" class="hollow-button2">Download my resume here</a><br><br>
                     <a class="hollow-button2" href="work.html">Check out my projects here!</a>
                 </div>
-                <div class="grid-it">
+                <div class="grid-it pic">
                     <img src="img/JustinMcd.png" alt="photo of justin mcdonald smiling" class="profile__portrait">
+                </div>
+            </div>
+        </section>
+        <section id="work">
+            <div class="container">
+                <h1>My Work</h1>
+                <div class="grid">
+                    <div class="grid__item">
+                        <h2>Mobile Web App</h2>
+                        <p>
+                            Within this project, I was responsible for the frontend. It's written in React.js.
+                            Additionally,
+                            I've created the HTML and CSS templates.
+                        </p>
+                        <a href="#">See project on GitHub</a>
+                    </div>
+                    <div class="grid__item">
+                        <h2>Mobile Web App</h2>
+                        <p>
+                            Within this project, I was responsible for the frontend. It's written in React.js.
+                            Additionally,
+                            I've created the HTML and CSS templates.
+                        </p>
+                        <a href="#">See project on GitHub</a>
+                    </div>
+                    <div class="grid__item">
+                        <h2>Mobile Web App</h2>
+                        <p>
+                            Within this project, I was responsible for the frontend. It's written in React.js.
+                            Additionally,
+                            I've created the HTML and CSS templates.
+                        </p>
+                        <a href="#">See project on GitHub</a>
+                    </div>
+                    <div class="grid__item">
+                        <h2>Mobile Web App</h2>
+                        <p>
+                            Within this project, I was responsible for the frontend. It’s written in React.js.
+                            Additionally,
+                            I've created the HTML and CSS templates.
+                        </p>
+                        <a href="#">See project on GitHub</a>
+                    </div>
+                    <div class="grid__item">
+                        <h2>Your Project?</h2>
+                        <p>
+                            This is a description of a project that I do for you!
+                        </p>
+                        <a href="#">See project on GitHub</a>
+                    </div>
                 </div>
             </div>
         </section>
