if applied this should update some more stylings, adding animations to my work cards and adjusting colors

--- a/index.html
+++ b/index.html
@@ -52,57 +52,58 @@
                     rest is
                     history.
                 </p>
-                <button class="hollow-button"><a href="work.html">Check out some of my code</a></button>
+                <button class="hollow-button2"><a href="#work">Check out some of my code</a></button>
             </div>
         </section>
         <section id="about-me">
-            <div class="two-col-grid">
+            <div class="container">
                 <h2 class="a-title">About Me</h2>
-                <div class="grid-it">
-                    <h2>Why I Love Web Development</h2>
-                    <p>
-                        I love web development because it allows me to exercise my creative muscles, solve complex and
-                        unique problems, and collorate with a diverse set of minds to achieve a common goal.
-                    </p>
-                    <h2>My Hobbies</h2>
-                    <ul>
-                        <li>Playing guitar</li>
-                        <li>Playing videogames</li>
-                        <li>Reading</li>
-                    </ul>
-                    <h2>My Skills</h2>
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Skills</th>
-                                <th>Experience</th>
-                                <th>Level of Expertise</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>HTML</td>
-                                <td>2 yrs</td>
-                                <td>Intermideate</td>
-                            </tr>
-                            <tr>
-                                <td>CSS</td>
-                                <td>2 yrs</td>
-                                <td>Intermideate</td>
-                            </tr>
-                            <tr>
-                                <td>JS</td>
-                                <td>2 yrs</td>
-                                <td>Intermediate</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <h2>My Resume and Projects</h2>
-                    <a href="#" class="hollow-button2">Download my resume here</a><br><br>
-                    <a class="hollow-button2" href="work.html">Check out my projects here!</a>
-                </div>
-                <div class="grid-it pic">
-                    <img src="img/JustinMcd.png" alt="photo of justin mcdonald smiling" class="profile__portrait">
+                <div class="two-col-grid">
+                    <div class="grid-it">
+                        <h2>Why I Love Web Development</h2>
+                        <p>
+                            I love web development because it allows me to exercise my creative muscles, solve complex
+                            and
+                            unique problems, and collorate with a diverse set of minds to achieve a common goal.
+                        </p>
+                        <h2>My Hobbies</h2>
+                        <ul>
+                            <li>Playing guitar</li>
+                            <li>Playing videogames</li>
+                            <li>Reading</li>
+                        </ul>
+                        <h2>My Skills</h2>
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Skills</th>
+                                    <th>Experience</th>
+                                    <th>Level of Expertise</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>HTML</td>
+                                    <td>2 yrs</td>
+                                    <td>Intermideate</td>
+                                </tr>
+                                <tr>
+                                    <td>CSS</td>
+                                    <td>2 yrs</td>
+                                    <td>Intermideate</td>
+                                </tr>
+                                <tr>
+                                    <td>JS</td>
+                                    <td>2 yrs</td>
+                                    <td>Intermediate</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <a href="#" class="hollow-button2">Download my resume here</a><br><br>
+                    </div>
+                    <div class="grid-it pic">
+                        <img src="img/JustinMcd.png" alt="photo of justin mcdonald smiling" class="profile__portrait">
+                    </div>
                 </div>
             </div>
         </section>
@@ -111,7 +112,7 @@
                 <h2 class="a-title">My Work</h2>
                 <div class="grid">
                     <div class="grid__item proj-card">
-                        <h2>Pokedex</h2>
+                        <h2 class="card-header">Pokedex</h2>
                         <p>
                             Within this project, I was responsible for the frontend. It's written in React.js.
                             Additionally,
@@ -120,7 +121,7 @@
                         <a href="#">See project on GitHub</a>
                     </div>
                     <div class="grid__item proj-card">
-                        <h2>Mobile Web App</h2>
+                        <h2 class="card-header2">Mobile Web App</h2>
                         <p>
                             Within this project, I was responsible for the frontend. It's written in React.js.
                             Additionally,
@@ -129,7 +130,7 @@
                         <a href="#">See project on GitHub</a>
                     </div>
                     <div class="grid__item proj-card">
-                        <h2>Mobile Web App</h2>
+                        <h2 class="card-header3">Mobile Web App</h2>
                         <p>
                             Within this project, I was responsible for the frontend. It's written in React.js.
                             Additionally,
@@ -138,7 +139,7 @@
                         <a href="#">See project on GitHub</a>
                     </div>
                     <div class="grid__item proj-card">
-                        <h2>Mobile Web App</h2>
+                        <h2 class="card-header2">Mobile Web App</h2>
                         <p>
                             Within this project, I was responsible for the frontend. It’s written in React.js.
                             Additionally,
@@ -147,7 +148,7 @@
                         <a href="#">See project on GitHub</a>
                     </div>
                     <div class="grid__item proj-card">
-                        <h2>Your Project?</h2>
+                        <h2 class="card-header">Your Project?</h2>
                         <p>
                             This is a description of a project that I do for you!
                         </p>
@@ -166,8 +167,6 @@
                         <p>Email: <a href="mailto:jmcdmoreno19@gmail.com">jmcdmoreno19@gmail.com</a></p>
                         <p>Tel: <a href="tel:0000000000">000-000-0000</a></p>
                     </address>
-                    <p><a class="hollow-button href=" mailto:uhhh.quigley@gmail.com">Get in touch with
-                            me!</a></p>
                 </div>
                 <form action="#" method="post" id="contactForm">
                     <div class="label-container">
@@ -182,7 +181,8 @@
                         <label for="message" class="formLabel">Message: </label>
                         <textarea id="message" required maxlength="240"></textarea>
                     </div>
-                    <button type="submit" class="hollow-button cta" value="Send message">SEND ME A MESSAGE</button>
+                    <button type="submit" class="hollow-button2 sub-btn" value="Send message">Get in touch with
+                        me!</button>
                 </form>
             </div>
         </section>
