if applied this should update the github link for my pokedex projec

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               Additionally,
               I've created the HTML and CSS templates.
             </p>
-            <a href="#">See project on GitHub</a>
+            <a href="https://github.com/Peluchemoreno/simple-js-app-poke">See project on GitHub</a>
           </div>
           <div class="grid__item proj-card">
             <h2 class="card-header2">Mobile Web App</h2>
